2006-02-16  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.cc (run_child): If it is not possible to
	change into the correct directory inside the chroot, print a
	warning rather than an error.

2006-02-07  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 0.2.3.

	* debian/control (Build-Depends): Add pkg-config build dependency.

	* NEWS: Bump version to 0.2.3.

	* configure.ac: Bump version to 0.2.3.

2006-02-07  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-setup.5.in: Document setup/05file.

	* schroot/schroot.1.in: Fix typo in macro.

2006-02-07  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-options.cc
	(options): Fix typo (begining).  Thanks to Clytie Siddall at the
	Free Translation Project for spotting it.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Version 0.2.2.

	* debian/changelog: Update for 0.2.2.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* po/en_GB.po: Update.

	* po/POTFILES.in: Update file list.

	* Minor cosmetic cleanups.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Remove static qualifer from functions in the unnamed namespace.

	* schroot/sbuild-chroot-config.cc
	(chroot_alphashort): Move to unnamed namespace.

	* Update doxygen documentation for file members.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Use the same indentation style for all function prototypes.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document updated defaults.

	* schroot/schroot.conf.5.in: Document updated defaults.

	* schroot/sbuild-chroot-lvm-snapshot.cc
	(chroot_lvm_snapshot): Default to running setup and session
	scripts.

	* schroot/sbuild-chroot-file.cc
	(chroot_file): Default to running setup and session scripts.

2006-02-06  Roger Leigh  <rleigh@debian.org>

	* debian/control: Add versioned depends on libpam0g-dev >=
	0.79-3.1, because earlier versions have broken headers, due to
	redefining internal glibc/libstdc++ types.

2006-02-06  Roger Leigh  <rleigh@debian.org>
